test/tests/packages/lets_nonlet/nonlet.txt
error: `constants.tql` may only contain `let` bindings
 --> <packages/nonletpkg/constants.tql>:2:1
  |
2 | from {x: 1}
  | ^^^^^^^^^^^ 
  |
  = note: in package `nonletpkg`
